Create acessibility changing from div to button

--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -1,7 +1,9 @@
-div.X {
+button {
+  background-color: transparent;
+}
+button.X {
   color: #e7040f;
 }
-
-div.O {
+button.O {
   color: #19a974;
 }
